# openeo-processes-dask-slim

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: main.yml  release.yml
openeo_processes_dask_slim/process_implementations/: arrays.py  comparison.py  utils.py
openeo_processes_dask_slim/process_implementations/cubes/: aggregate.py  apply_neighborhood_intertwin.py  resample.py
openeo_processes_dask_slim/process_implementations/ml/: random_forest.py
tests/: conftest.py  test_aggregate.py  test_arrays.py  test_comparison.py  test_filter.py  test_ml.py  test_resample.py
