[tool.poetry]
name = "openeo-processes-dask-slim"
version = "2026.6.1"
description = "Python implementations of many OpenEO processes, dask-friendly by default. This repo is a fork of the main repo and has been slimmed down to avoid dependency hell."
authors = ["Gerald Irsiegler <gerald.irsiegler@eodc.eu>","Lukas Weidenholzer <lukas.weidenholzer@eodc.eu>", "Sean Hoyal <sean.hoyal@eodc.eu>", "Valentina Hutter <valentina.hutter@eodc.eu>"]
maintainers = ["EODC Staff <support@eodc.eu>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/Open-EO/openeo-processes-dask-slim"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

packages = [
    { include = "openeo_processes_dask_slim" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
geopandas = { version = ">=0.11.1,<2", optional = true }
pandas = { version = ">=2.0.0", optional = true }
xarray = { version = ">=2025.6.0", optional = true }  # bump for zarr-python 3 _FillValue compat
dask = {extras = ["array", "dataframe", "distributed"], version = ">=2023.4.0", optional = true}
dask-geopandas = { version = ">=0.5.0", optional = true }
xgboost = { version = ">=1.5.1", extras = ["dask"], optional = true }
openeo-pg-parser-networkx = { version = ">=2025.10", optional = true }
rqadeforestation = ">=0.1"
odc-geo = { version = ">=0.4.1,<1", optional = true }
stac_validator = { version = ">=3.3.1", optional = true }
odc-stac = { version = ">=0.3.9", optional = true }
pystac_client = { version = ">=0.6.1", optional = true }
planetary_computer = { version = ">=0.5.1", optional = true }
scipy = "^1.11.3"
xvec = { version = "0.2.0", optional = true }
joblib = { version = ">=1.3.2", optional = true }
geoparquet = "^0.0.3"
pyarrow = ">=15.0.2"
openeo = ">=0.36.0"
numpy = { version = ">=1.26.3,<3", optional = false }
pystac = { version = ">=1.8.0", optional = false }
zarr = [
    { version = ">=2.17.0,<2.18", markers = "python_version < '3.11'" },
    { version = ">=2.18.7,<4", markers = "python_version >= '3.11'" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ipykernel = "^6.15.1"
matplotlib = "^3.5.3"
folium = ">=0.12.1,<1"
mapclassify = "^2.4.3"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"


[tool.poetry.extras]
implementations = ["geopandas", "xarray", "dask", "dask-geopandas", "openeo-pg-parser-networkx", "odc-geo", "odc-stac", "planetary_computer", "pystac_client", "stac_validator", "xvec", "joblib"]
ml = ["xgboost"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
